# a

./: .gitignore  100GB-testfile-org  a.code-workspace  build.sh  color.txt  eslint.config.mts  extra.txt  flake.nix  justfile  package.json  taskfile.yaml  test.json  treefmt.nix
_.backup/cl/: Cargo.toml  _.rs
_.backup/en/: Cargo.toml  _.rs  event.rs  io.rs  mutex.rs  spawn.rs  time.rs
_.backup/en/event/: cross.rs
_.backup/en/io/: apples.rs
_.backup/en/io/apples/: efg.rs
_.backup/en/spawn/: worker.rs
_.backup/en/spawn/worker/: pool.rs
_.backup/hq/: Cargo.toml
_.backup/hq/app/: chrome.rs
_.backup/xx/: Cargo.toml  _.rs  a.rs  z.rs
_.backup/zz/: Cargo.toml  _.rs
flake/: x.nix  z.nix
flake/x/: address.nix  console.nix  defence.nix  network.nix  oxidant.nix  textual.nix  virtual.nix
flake/x/machine/: i.nix
flake/x/machine/i/: keyd.nix  razer.nix
flake/x/machine/o/: bt.nix
flake/x/network/o/: webhost.nix
flake/z/browser/: chrome.nix  firefox.nix
flake/z/channel/: hyprland.nix
flake/z/channel/hyprland/: shading.glsl
flake/z/codedit/: vscode.nix
flake/z/codedit/vscode/: keybind.nix  setting.nix
flake/z/codedit/vscode/setting/: design.nix  source.nix  system.nix
flake/z/codedit/vscode/setting/design/: chat.nix  colour.nix  cursor.nix  debug.nix  editor.nix  explorer.nix  extension.nix  font.nix  notebook.nix  search.nix  security.nix  terminal.nix  text.nix  window.nix  workbench.nix
flake/z/codedit/vscode/setting/source/: c.nix  comment.nix  css.nix  html.nix  ipynb.nix  javascript.nix  json.nix  just.nix  md.nix  nix.nix  php.nix  plaintext.nix  rust.nix  toml.nix  typescript.nix  xml.nix  yaml.nix
flake/z/codedit/vscode/setting/system/: app.nix  npm.nix  (+5 more)
flake/z/codedit/vscode/storage/: 22.txt  abc.css  know.css  know.txt  other.css  test.txt  variable.css  workbench.desktop.main.css  workbench.desktop.main.js
flake/z/command/: foot.nix
flake/z/program/: act.nix  bun.nix  git.nix  xdg.nix
flake/z/service/: mako.nix  remmina.nix  wluma.nix
flake/z/storage/: static.nix
flake/z/storage/static/: home.nix  justfile  task.yaml
flake/z/terminal/: alacritty.nix  foot.nix  wezterm.nix
flake/z/terminal/software/: nushell.nix  zellij.nix
flake/z/terminal/software/nushell/: config.nu
flake/z/utility/: foot.nix  rofi.nix  wayprompt.nix  zellij.nix
pointer-dot-red/: flake.nix
pointer-dot-red/svg/: manifest.hl
pointer-dot-red/svg/manifest/left_ptr/: meta.hl
textual-pragmata-pro/: flake.nix
(+95 files in other folders)
