[[bin]]
  doctest = false
  name    = "xx"
  path    = "_.rs"

[dependencies]
  cl              = { path = "../cl" }
  crossbeam       = "0.8.4"
  crossbeam-queue = "0.3.12"
  en              = { path = "../en" }
  hq              = { path = "../hq" }
  libc            = "1.0.0-alpha.1"

[package]
  authors = [
    "Zyrosk <hq.zyrosk@gmail.com>",
  ]
  categories = [
    "development-tools::debugging",
  ]
  description = "A Chrome DevTools Protocol client"
  edition = "2024"
  keywords = [
    "chrome",
    "client",
    "devtools",
    "protocol",
  ]
  license = "MIT OR Apache-2.0"
  name = "xx"
  repository = "https://github.com/hq-zyrosk/rs"
  version = "1.3.6"
